1999-02-23  Alexander Larsson  <alla@lysator.liu.se>

	* objects/UML/message.c (fill_in_dialog):
	Fixed warnings.

1999-02-22  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* objects/standard/zigzagline.c:
	* objects/standard/polyline.c:
	* objects/standard/line.c:
	* objects/standard/arc.c:
	* lib/widgets.h:
	* lib/arrows.h:
	* lib/widgets.c:
	Support for sizeable arrows. 

	* objects/standard/box.c:
	* objects/standard/ellipse.c:
	* objects/standard/image.c:
	Changed creation handle to lower-right.
	Transparent box/ellipse.
	
	* objects/standard/image.c:
	Better layout of properties boxes.

1999-02-20  Alejandro Aguilar Sierra  <asierra@servidor.unam.mx>

	* objects/UML/message.c (fill_in_dialog): 
	Fixed dialog fill in. Common dialog for all messages.

	* objects/UML/object.c: 
	Added multiple instance. Dialog related bugs fixed.
	Common dialog for all instances. Completed copy and destroy.

	* objects/UML/lifeline.c (lifeline_load): 
	Conn initialization bug fixed and few bad loading prevention flags.
	Common dialog for all lifeline objects.
	
1999-02-15  Alexander Larsson  <alla@lysator.liu.se>

	* lib/dia_image.[ch]:
	More work on the DiaImage abstraction.
	
	* app/app_procs.c:
	* app/render_eps.c:
	* app/render_gdk.c:
	* objects/standard/image.c:
	Use the new DiaImage calls.

1999-02-15  Alexander Larsson  <alla@lysator.liu.se>

	* app/menus.c:
	* app/display.c:
	Reversed the meaning of align horizontal/vertical.

1999-02-15  Alexander Larsson  <alla@lysator.liu.se>

	* app/load_save.c (diagram_load):
	Statusbar update fix.

1999-02-15  Alexander Larsson  <alla@lysator.liu.se>

	* app/interface.c (create_display_shell):
	Fixed status bar size.
	
1999-02-15  Alexander Larsson  <alla@lysator.liu.se>

	* lib/dia_image.[ch]:
	Added extern declaration for dia_image_release.
	Removed dia_image_draw, as it's not neseccary.

1999-02-14  Alejandro Aguilar Sierra  <asierra@servidor.unam.mx>
	
	* app/object_ops.c: 
	* app/menus.c: 